seaqt/QtWidgets/gen_qfiledialog.nim

proc fcQFileDialog_getSaveFileUrl2(parent: pointer, caption: struct_miqt_string): pointer {.importc: "QFileDialog_getSaveFileUrl2".}
proc fcQFileDialog_getSaveFileUrl3(parent: pointer, caption: struct_miqt_string, dir: pointer): pointer {.importc: "QFileDialog_getSaveFileUrl3".}
proc fcQFileDialog_getSaveFileUrl4(parent: pointer, caption: struct_miqt_string, dir: pointer, filter: struct_miqt_string): pointer {.importc: "QFileDialog_getSaveFileUrl4".}
proc fcQFileDialog_getExistingDirectory1(parent: pointer): struct_miqt_string {.importc: "QFileDialog_getExistingDirectory1".}
proc fcQFileDialog_getExistingDirectory2(parent: pointer, caption: struct_miqt_string): struct_miqt_string {.importc: "QFileDialog_getExistingDirectory2".}
proc fcQFileDialog_getExistingDirectory3(parent: pointer, caption: struct_miqt_string, dir: struct_miqt_string): struct_miqt_string {.importc: "QFileDialog_getExistingDirectory3".}
proc fcQFileDialog_getExistingDirectory4(parent: pointer, caption: struct_miqt_string, dir: struct_miqt_string, options: cint): struct_miqt_string {.importc: "QFileDialog_getExistingDirectory4".}
proc fcQFileDialog_getExistingDirectoryUrl1(parent: pointer): pointer {.importc: "QFileDialog_getExistingDirectoryUrl1".}
proc fcQFileDialog_getExistingDirectoryUrl2(parent: pointer, caption: struct_miqt_string): pointer {.importc: "QFileDialog_getExistingDirectoryUrl2".}
proc fcQFileDialog_getExistingDirectoryUrl3(parent: pointer, caption: struct_miqt_string, dir: pointer): pointer {.importc: "QFileDialog_getExistingDirectoryUrl3".}
proc fcQFileDialog_getExistingDirectoryUrl4(parent: pointer, caption: struct_miqt_string, dir: pointer, options: cint): pointer {.importc: "QFileDialog_getExistingDirectoryUrl4".}
proc fcQFileDialog_getExistingDirectoryUrl5(parent: pointer, caption: struct_miqt_string, dir: pointer, options: cint, supportedSchemes: struct_miqt_array): pointer {.importc: "QFileDialog_getExistingDirectoryUrl5".}
proc fcQFileDialog_getOpenFileNames1(parent: pointer): struct_miqt_array {.importc: "QFileDialog_getOpenFileNames1".}
proc fcQFileDialog_getOpenFileNames2(parent: pointer, caption: struct_miqt_string): struct_miqt_array {.importc: "QFileDialog_getOpenFileNames2".}
proc fcQFileDialog_getOpenFileNames3(parent: pointer, caption: struct_miqt_string, dir: struct_miqt_string): struct_miqt_array {.importc: "QFileDialog_getOpenFileNames3".}
proc fcQFileDialog_getOpenFileNames4(parent: pointer, caption: struct_miqt_string, dir: struct_miqt_string, filter: struct_miqt_string): struct_miqt_array {.importc: "QFileDialog_getOpenFileNames4".}
proc fcQFileDialog_getOpenFileUrls1(parent: pointer): struct_miqt_array {.importc: "QFileDialog_getOpenFileUrls1".}
proc fcQFileDialog_getOpenFileUrls2(parent: pointer, caption: struct_miqt_string): struct_miqt_array {.importc: "QFileDialog_getOpenFileUrls2".}
proc fcQFileDialog_getOpenFileUrls3(parent: pointer, caption: struct_miqt_string, dir: pointer): struct_miqt_array {.importc: "QFileDialog_getOpenFileUrls3".}
proc fcQFileDialog_getOpenFileUrls4(parent: pointer, caption: struct_miqt_string, dir: pointer, filter: struct_miqt_string): struct_miqt_array {.importc: "QFileDialog_getOpenFileUrls4".}
proc fQFileDialog_virtualbase_metaObject(self: pointer, ): pointer{.importc: "QFileDialog_virtualbase_metaObject".}
proc fcQFileDialog_override_virtual_metaObject(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_metaObject".}
proc fQFileDialog_virtualbase_metacast(self: pointer, param1: cstring): pointer{.importc: "QFileDialog_virtualbase_metacast".}
proc fcQFileDialog_override_virtual_metacast(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_metacast".}
proc fQFileDialog_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint{.importc: "QFileDialog_virtualbase_metacall".}
proc fcQFileDialog_override_virtual_metacall(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_metacall".}
proc fQFileDialog_virtualbase_setVisible(self: pointer, visible: bool): void{.importc: "QFileDialog_virtualbase_setVisible".}
proc fcQFileDialog_override_virtual_setVisible(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_setVisible".}
proc fQFileDialog_virtualbase_done(self: pointer, resultVal: cint): void{.importc: "QFileDialog_virtualbase_done".}
proc fcQFileDialog_override_virtual_done(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_done".}
proc fQFileDialog_virtualbase_accept(self: pointer, ): void{.importc: "QFileDialog_virtualbase_accept".}
proc fcQFileDialog_override_virtual_accept(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_accept".}
proc fQFileDialog_virtualbase_changeEvent(self: pointer, e: pointer): void{.importc: "QFileDialog_virtualbase_changeEvent".}
proc fcQFileDialog_override_virtual_changeEvent(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_changeEvent".}
proc fQFileDialog_virtualbase_sizeHint(self: pointer, ): pointer{.importc: "QFileDialog_virtualbase_sizeHint".}
proc fcQFileDialog_override_virtual_sizeHint(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_sizeHint".}
proc fQFileDialog_virtualbase_minimumSizeHint(self: pointer, ): pointer{.importc: "QFileDialog_virtualbase_minimumSizeHint".}
proc fcQFileDialog_override_virtual_minimumSizeHint(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_minimumSizeHint".}
proc fQFileDialog_virtualbase_open(self: pointer, ): void{.importc: "QFileDialog_virtualbase_open".}
proc fcQFileDialog_override_virtual_open(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_open".}
proc fQFileDialog_virtualbase_exec(self: pointer, ): cint{.importc: "QFileDialog_virtualbase_exec".}
proc fcQFileDialog_override_virtual_exec(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_exec".}
proc fQFileDialog_virtualbase_reject(self: pointer, ): void{.importc: "QFileDialog_virtualbase_reject".}
proc fcQFileDialog_override_virtual_reject(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_reject".}
proc fQFileDialog_virtualbase_keyPressEvent(self: pointer, param1: pointer): void{.importc: "QFileDialog_virtualbase_keyPressEvent".}
proc fcQFileDialog_override_virtual_keyPressEvent(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_keyPressEvent".}
proc fQFileDialog_virtualbase_closeEvent(self: pointer, param1: pointer): void{.importc: "QFileDialog_virtualbase_closeEvent".}
proc fcQFileDialog_override_virtual_closeEvent(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_closeEvent".}
proc fQFileDialog_virtualbase_showEvent(self: pointer, param1: pointer): void{.importc: "QFileDialog_virtualbase_showEvent".}
proc fcQFileDialog_override_virtual_showEvent(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_showEvent".}
proc fQFileDialog_virtualbase_resizeEvent(self: pointer, param1: pointer): void{.importc: "QFileDialog_virtualbase_resizeEvent".}
proc fcQFileDialog_override_virtual_resizeEvent(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_resizeEvent".}
proc fQFileDialog_virtualbase_contextMenuEvent(self: pointer, param1: pointer): void{.importc: "QFileDialog_virtualbase_contextMenuEvent".}
proc fcQFileDialog_override_virtual_contextMenuEvent(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_contextMenuEvent".}
proc fQFileDialog_virtualbase_eventFilter(self: pointer, param1: pointer, param2: pointer): bool{.importc: "QFileDialog_virtualbase_eventFilter".}
proc fcQFileDialog_override_virtual_eventFilter(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_eventFilter".}
proc fQFileDialog_virtualbase_devType(self: pointer, ): cint{.importc: "QFileDialog_virtualbase_devType".}
proc fcQFileDialog_override_virtual_devType(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_devType".}
proc fQFileDialog_virtualbase_heightForWidth(self: pointer, param1: cint): cint{.importc: "QFileDialog_virtualbase_heightForWidth".}
proc fcQFileDialog_override_virtual_heightForWidth(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_heightForWidth".}
proc fQFileDialog_virtualbase_hasHeightForWidth(self: pointer, ): bool{.importc: "QFileDialog_virtualbase_hasHeightForWidth".}
proc fcQFileDialog_override_virtual_hasHeightForWidth(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_hasHeightForWidth".}
proc fQFileDialog_virtualbase_paintEngine(self: pointer, ): pointer{.importc: "QFileDialog_virtualbase_paintEngine".}
proc fcQFileDialog_override_virtual_paintEngine(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_paintEngine".}
proc fQFileDialog_virtualbase_event(self: pointer, event: pointer): bool{.importc: "QFileDialog_virtualbase_event".}
proc fcQFileDialog_override_virtual_event(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_event".}
proc fQFileDialog_virtualbase_mousePressEvent(self: pointer, event: pointer): void{.importc: "QFileDialog_virtualbase_mousePressEvent".}
proc fcQFileDialog_override_virtual_mousePressEvent(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_mousePressEvent".}
proc fQFileDialog_virtualbase_mouseReleaseEvent(self: pointer, event: pointer): void{.importc: "QFileDialog_virtualbase_mouseReleaseEvent".}
proc fcQFileDialog_override_virtual_mouseReleaseEvent(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_mouseReleaseEvent".}
proc fQFileDialog_virtualbase_mouseDoubleClickEvent(self: pointer, event: pointer): void{.importc: "QFileDialog_virtualbase_mouseDoubleClickEvent".}
proc fcQFileDialog_override_virtual_mouseDoubleClickEvent(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_mouseDoubleClickEvent".}
proc fQFileDialog_virtualbase_mouseMoveEvent(self: pointer, event: pointer): void{.importc: "QFileDialog_virtualbase_mouseMoveEvent".}
proc fcQFileDialog_override_virtual_mouseMoveEvent(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_mouseMoveEvent".}
proc fQFileDialog_virtualbase_wheelEvent(self: pointer, event: pointer): void{.importc: "QFileDialog_virtualbase_wheelEvent".}
proc fcQFileDialog_override_virtual_wheelEvent(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_wheelEvent".}
proc fQFileDialog_virtualbase_keyReleaseEvent(self: pointer, event: pointer): void{.importc: "QFileDialog_virtualbase_keyReleaseEvent".}
proc fcQFileDialog_override_virtual_keyReleaseEvent(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_keyReleaseEvent".}
proc fQFileDialog_virtualbase_focusInEvent(self: pointer, event: pointer): void{.importc: "QFileDialog_virtualbase_focusInEvent".}
proc fcQFileDialog_override_virtual_focusInEvent(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_focusInEvent".}
proc fQFileDialog_virtualbase_focusOutEvent(self: pointer, event: pointer): void{.importc: "QFileDialog_virtualbase_focusOutEvent".}
proc fcQFileDialog_override_virtual_focusOutEvent(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_focusOutEvent".}
proc fQFileDialog_virtualbase_enterEvent(self: pointer, event: pointer): void{.importc: "QFileDialog_virtualbase_enterEvent".}
proc fcQFileDialog_override_virtual_enterEvent(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_enterEvent".}
proc fQFileDialog_virtualbase_leaveEvent(self: pointer, event: pointer): void{.importc: "QFileDialog_virtualbase_leaveEvent".}
proc fcQFileDialog_override_virtual_leaveEvent(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_leaveEvent".}
proc fQFileDialog_virtualbase_paintEvent(self: pointer, event: pointer): void{.importc: "QFileDialog_virtualbase_paintEvent".}
proc fcQFileDialog_override_virtual_paintEvent(self: pointer, slot: int) {.importc: "QFileDialog_override_virtual_paintEvent".}
